--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -167,7 +167,12 @@
       </div>
 
       <div class="checkbox">
-        <input type="checkbox" autocomplete="on" formControlName="checkbox" />
+        <input
+          type="checkbox"
+          required
+          autocomplete="on"
+          formControlName="checkbox"
+        />
         <div class="checkbox__text">
           I agree, on behalf of the corporation identified in the application,
           to be bound by the terms of the
